--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
+
+
+@layer base{
+  html{
+    height:100%;
+    width:100%;
+    
+   
+  }
+  ::-webkit-scrollbar{
+        @apply bg-dark ;
+  }
+
+  ::-webkit-scrollbar-thumb{
+     @apply bg-dark-gray;
+  }
+
+  body{
+    
+    height:100%;
+    width:100%;
+    @apply bg-dark text-light-gray;
+  }
+
+  
+
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components{
+
+    .delimitation{
+      @apply border-solid border-4;
+    }
+
+    .delimitation-s{
+      @apply border-solid border-2;
+    }
+
+    .byellow{
+      @apply border-yellow-500;
+    }
+
+
+    .bred{
+      @apply border-red-500;
+    }
+
+    
+
+    .bblue{
+      @apply border-blue-500;
+    }
+
+    .bgreen{
+      @apply border-green-700;
+    }
+
+    .bpurple
+    {
+      @apply border-purple-500;
+    }
 }
